Initial fix for supporting native flex gap

--- a/test/gap.css
+++ b/test/gap.css
@@ -1,54 +1,61 @@
 .g_20px {
 	display: flex;
 	gap: 20px;
+	--fl-gap: 20px;
 }
 
 .g_40px {
 	display: flex;
 	gap: 40px;
+	--fl-gap: 40px;
 }
 
 .g_10\% {
 	display: flex;
 	gap: 10%;
+	--fl-gap: 10%;
 }
 
 .g_30\% {
 	display: flex;
 	gap: 30%;
+	--fl-gap: 30%;
 }
 
 .g_25\% {
 	display: flex;
 	gap: 25%;
+	--fl-gap: 25%;
 }
 
 .g_3\% {
 	display: flex;
 	gap: 3%;
+	--fl-gap: 3%;
 }
 
 .g_6\% {
 	display: flex;
 	gap: 6%;
+	--fl-gap: 6%;
 }
 
 .w_400px {
-	width: 400px;
+	width: calc(400px - var(--fl-gap));
 }
 
 .w_600px {
-	width: 600px;
+	width: calc(600px - var(--fl-gap));
 }
 
 .w_800px {
-	width: 800px;
+	width: calc(800px - var(--fl-gap));
 }
 
 .w_25\% {
-	width: 25%;
+	width: calc(25% - var(--fl-gap));
 }
 
 .w_50\% {
-	width: 50%;
+	width: calc(50% - var(--fl-gap));
 }
