--- a/test/gap.expect.css
+++ b/test/gap.expect.css
@@ -27,6 +27,7 @@
 
 .g_20px {
 	display: flex;
+	--fl-gap: 20px;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, calc(var(--FI_gap_parent_row, 0px) - 20px)) !important;
 	--FI_gap_parent_row: initial;
@@ -77,6 +78,7 @@
 
 .g_40px {
 	display: flex;
+	--fl-gap: 40px;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, calc(var(--FI_gap_parent_row, 0px) - 40px)) !important;
 	--FI_gap_parent_row: initial;
@@ -127,6 +129,7 @@
 
 .g_10\% {
 	display: flex;
+	--fl-gap: 10%;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_percentage-decimal_row: 0.1;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, var(--FI_gap_percentage-to-pixels_row, calc( ((var(--FI_gap_parent_row, 0%) - 10%) * var(--FI_width_percentages-decimal, 1)) / (100 - 10) * 100))) !important;
@@ -179,6 +182,7 @@
 
 .g_30\% {
 	display: flex;
+	--fl-gap: 30%;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_percentage-decimal_row: 0.3;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, var(--FI_gap_percentage-to-pixels_row, calc( ((var(--FI_gap_parent_row, 0%) - 30%) * var(--FI_width_percentages-decimal, 1)) / (100 - 30) * 100))) !important;
@@ -231,6 +235,7 @@
 
 .g_25\% {
 	display: flex;
+	--fl-gap: 25%;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_percentage-decimal_row: 0.25;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, var(--FI_gap_percentage-to-pixels_row, calc( ((var(--FI_gap_parent_row, 0%) - 25%) * var(--FI_width_percentages-decimal, 1)) / (100 - 25) * 100))) !important;
@@ -283,6 +288,7 @@
 
 .g_3\% {
 	display: flex;
+	--fl-gap: 3%;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_percentage-decimal_row: 0.03;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, var(--FI_gap_percentage-to-pixels_row, calc( ((var(--FI_gap_parent_row, 0%) - 3%) * var(--FI_width_percentages-decimal, 1)) / (100 - 3) * 100))) !important;
@@ -335,6 +341,7 @@
 
 .g_6\% {
 	display: flex;
+	--fl-gap: 6%;
 	--FI_has-polyfil_gap-container: initial;
 	--FI_gap_percentage-decimal_row: 0.06;
 	--FI_gap_container_row: var(--FI_has-polyfil_gap-container, var(--FI_gap_percentage-to-pixels_row, calc( ((var(--FI_gap_parent_row, 0%) - 6%) * var(--FI_width_percentages-decimal, 1)) / (100 - 6) * 100))) !important;
@@ -369,10 +376,10 @@
 }
 
 .w_400px {
-	width: var(--FI_width);
-	--FI_gap_percentage-to-pixels_column: calc(-400px * var(--FI_gap_percentage-decimal_column)) !important;
-	--FI_gap_percentage-to-pixels_row: calc(-400px * var(--FI_gap_percentage-decimal_column)) !important;
-	--FI_width: calc(400px - var(--FI_gap_container_column, 0%)) !important;
+	width: calc(400px - var(--fl-gap));
+	--FI_gap_percentage-to-pixels_column: calc(-calc(400px - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_gap_percentage-to-pixels_row: calc(-calc(400px - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_width: calc(calc(400px - var(--fl-gap)) - var(--FI_gap_container_column, 0%)) !important;
 }
 
 .w_600px > * {
@@ -381,10 +388,10 @@
 }
 
 .w_600px {
-	width: var(--FI_width);
-	--FI_gap_percentage-to-pixels_column: calc(-600px * var(--FI_gap_percentage-decimal_column)) !important;
-	--FI_gap_percentage-to-pixels_row: calc(-600px * var(--FI_gap_percentage-decimal_column)) !important;
-	--FI_width: calc(600px - var(--FI_gap_container_column, 0%)) !important;
+	width: calc(600px - var(--fl-gap));
+	--FI_gap_percentage-to-pixels_column: calc(-calc(600px - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_gap_percentage-to-pixels_row: calc(-calc(600px - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_width: calc(calc(600px - var(--fl-gap)) - var(--FI_gap_container_column, 0%)) !important;
 }
 
 .w_800px > * {
@@ -393,28 +400,32 @@
 }
 
 .w_800px {
-	width: var(--FI_width);
-	--FI_gap_percentage-to-pixels_column: calc(-800px * var(--FI_gap_percentage-decimal_column)) !important;
-	--FI_gap_percentage-to-pixels_row: calc(-800px * var(--FI_gap_percentage-decimal_column)) !important;
-	--FI_width: calc(800px - var(--FI_gap_container_column, 0%)) !important;
+	width: calc(800px - var(--fl-gap));
+	--FI_gap_percentage-to-pixels_column: calc(-calc(800px - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_gap_percentage-to-pixels_row: calc(-calc(800px - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_width: calc(calc(800px - var(--fl-gap)) - var(--FI_gap_container_column, 0%)) !important;
 }
 
 .w_25\% > * {
-	--FI_width_percentages-decimal: initial;
+	--FI_gap_percentage-to-pixels_column: initial;
+	--FI_gap_percentage-to-pixels_row: initial;
 }
 
 .w_25\% {
-	width: var(--FI_width);
-	--FI_width_percentages-decimal: 0.25 !important;
-	--FI_width: calc(25% - var(--FI_gap_container_column, 0%)) !important;
+	width: calc(25% - var(--fl-gap));
+	--FI_gap_percentage-to-pixels_column: calc(-calc(25% - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_gap_percentage-to-pixels_row: calc(-calc(25% - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_width: calc(calc(25% - var(--fl-gap)) - var(--FI_gap_container_column, 0%)) !important;
 }
 
 .w_50\% > * {
-	--FI_width_percentages-decimal: initial;
+	--FI_gap_percentage-to-pixels_column: initial;
+	--FI_gap_percentage-to-pixels_row: initial;
 }
 
 .w_50\% {
-	width: var(--FI_width);
-	--FI_width_percentages-decimal: 0.5 !important;
-	--FI_width: calc(50% - var(--FI_gap_container_column, 0%)) !important;
+	width: calc(50% - var(--fl-gap));
+	--FI_gap_percentage-to-pixels_column: calc(-calc(50% - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_gap_percentage-to-pixels_row: calc(-calc(50% - var(--fl-gap)) * var(--FI_gap_percentage-decimal_column)) !important;
+	--FI_width: calc(calc(50% - var(--fl-gap)) - var(--FI_gap_container_column, 0%)) !important;
 }
